# pb-cli

./: .pdm-python  LICENSE  README.md  pyproject.toml
pbcli/: __init__.py  __main__.py  backends.py  cli.py  clipboard.py
tests/: test_file_backend.py
