[project]
name = "pb-cli-linux"
version = "0.5.0"
description = "Linux-only pbcopy/pbpaste for CLI: pyclip → wl-clipboard → tmux → file (no X11 deps)"
readme = "README.md"
authors = [{name = "elvee"}]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.0",
    "pyclip>=0.7.0",
]

[project.license]
text = "MIT License"

[project.urls]
Homepage = "https://example.com/pb-cli-linux"
Repository = "https://example.com/pb-cli-linux.git"

[project.scripts]
pb-cli = "pbcli.cli:run_main"
pbcopy = "pbcli.cli:run_pbcopy"
pbpaste = "pbcli.cli:run_pbpaste"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
